[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/misc/fire_charm.png" type="Texture" id=1]
[ext_resource path="res://scripts/skills/FireCharm.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18.2143, 11.4286 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9.64286, 3.5433 )

[node name="FireCharm" type="KinematicBody2D"]
scale = Vector2( 1.4, 1.4 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4.64286, -5.10897e-07 )
shape = SubResource( 5 )

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.357143, 2.52203 )
shape = SubResource( 6 )

[node name="StopMovingTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
[connection signal="timeout" from="StopMovingTimer" to="." method="_on_StopMovingTimer_timeout"]
